댓글 기능 추가

--- a/_config.yml
+++ b/_config.yml
@@ -52,3 +52,6 @@ collections:
     output: true
     permalink: /:year/:month/:day/:title/
     order: ascending # 추가: 게시글 정렬을 오름차순으로 설정
+
+
+google_analytics: G-CZ0D0BC43Z
